Work. Much Awesome. Wow!

--- a/home.html
+++ b/home.html
@@ -141,6 +141,8 @@
             <div class="section__wrap">
                 <p class="footer__credits">Made by <a href="http://jd-powered.net/" rel="author">&raquo;jd&laquo; powered</a> using <i class="footer__icon  icon--kirby"></i> and and a whole lot of <i class="footer__icon  icon--coffee"></i>.</p>
                 <p class="footer__legal">
+                    <a href="http://getkirby.com/forum/">Official Forums</a>
+                    <a href="http://getkirby.com/buy">Buy Kirby</a>
                     <a href="http://jd-powered.net/contact">Imprint</a>
                 </p>
             </div>
